--- a/src/css/SampleConfigForm.css
+++ b/src/css/SampleConfigForm.css
@@ -26,7 +26,7 @@
         .upload-type-selector {
             display: flex;
             color: #000000;
-            border-bottom: 1px solid #BBC5E1;
+            border-bottom: 1px solid #bbc5e1;
             background-color: transparent;
             margin: 0px 25px;
 
@@ -48,11 +48,11 @@
                 }
             }
             .upload-type-button.active {
-                color: #3459BF;
-                border-bottom: 2px solid #3459BF;
+                color: #3459bf;
+                border-bottom: 2px solid #3459bf;
 
                 svg {
-                    color: #1060C9;
+                    color: #1060c9;
                 }
             }
         }
@@ -62,36 +62,41 @@
             flex-direction: column;
             width: 85%;
             margin: auto;
-            
+
             .success-banner {
                 display: flex;
                 flex-direction: column;
-                background-color: #f8fff8;
-                border: 1px solid darkgreen;
+                background-color: #f9fff9;
+                border: 1px solid #2e9c2d;
                 border-radius: 8px;
                 align-items: start;
 
                 .header {
+                    display: flex;
                     color: darkgreen;
                     padding: 10px;
                     font-size: 1rem;
                     font-weight: 600;
+                    gap: 8px;
+
+                    svg {
+                        height: 20px;
+                        color: #a3d6a3;
+                    }
                 }
                 .body {
-                    padding: 10px;
+                    padding: 10px 10px 10px 30px;
                     font-size: 0.875rem;
                 }
             }
         }
-        
     }
 
-    
     .file-drag-upload-container {
         display: flex;
         justify-content: center;
         margin: 30px auto;
-        border: 1px solid #A8A8A8;
+        border: 1px solid #a8a8a8;
         border-radius: 10px;
         padding: 25px;
         width: 80%;
@@ -104,8 +109,8 @@
             align-items: center;
             justify-content: flex-end;
             padding: 20px;
-            background-color: #F7F8F9;
-            border: 1px dashed #A8A8A8;
+            background-color: #f7f8f9;
+            border: 1px dashed #a8a8a8;
             border-spacing: 5px;
             border-radius: 10px;
 
@@ -117,22 +122,22 @@
                 width: 100%;
 
                 .spinner-border {
-                    color: #DCDCDC;
+                    color: #dcdcdc;
                     margin: auto;
                 }
-                
+
                 .upload-prompt {
                     display: flex;
                     flex: 1;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    color: #617C9D;
+                    color: #617c9d;
                     text-align: center;
                     gap: 15px;
 
                     svg {
-                        color: #DCDCDC;
+                        color: #dcdcdc;
                         height: 80px;
                     }
                 }
@@ -141,15 +146,15 @@
                     display: flex;
                     width: 100%;
                     position: relative;
-                    color: #617C9D;
-                    border-bottom: 1px solid #617C9D;
+                    color: #617c9d;
+                    border-bottom: 1px solid #617c9d;
                     height: 20px;
                     margin: 20px 0px;
 
                     span {
                         position: absolute;
                         bottom: -13px;
-                        background-color: #F7F8F9;
+                        background-color: #f7f8f9;
                         transform: translateX(-50%);
                         left: 50%;
                         padding: 0px 10px;
@@ -165,20 +170,20 @@
                         /* flex: 1; */
                         gap: 15px;
                         height: 40px;
-    
+
                         input {
                             flex: 1;
                             border-radius: 5px;
-                            border: 1px solid #DCDCDC;
+                            border: 1px solid #dcdcdc;
                             padding: 0px 20px;
-                            color: #617C9D;
+                            color: #617c9d;
                         }
                         button {
                             width: 200px;
                             border-radius: 5px;
-                            border: 1px solid #DCDCDC;
-                            background-color: #FFFFFF;
-                            color: #1060C9;
+                            border: 1px solid #dcdcdc;
+                            background-color: #ffffff;
+                            color: #1060c9;
                         }
                     }
                 }
@@ -186,11 +191,23 @@
         }
         .file-upload-dropzone:hover {
             cursor: pointer;
-            background-color: #F0F1F3;
+            background-color: #f0f1f3;
 
             .divider {
                 span {
-                    background-color: #F0F1F3;
+                    background-color: #f0f1f3;
+                }
+            }
+        }
+        .file-upload-dropzone.dragging {
+            background-color: #e6f1ff;
+            border: 2px solid #1060c9;
+
+            .file-upload-prompt {
+                .upload-prompt {
+                    svg {
+                        color: #4d9aff;
+                    }
                 }
             }
         }
