--- a/src/css/VisOverviewPanel.css
+++ b/src/css/VisOverviewPanel.css
@@ -225,6 +225,28 @@
                 top: 100%;
                 box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
                 margin-top: 4px;
+
+                .dropdown-item {
+                    padding: 10px;
+                    display: flex;
+                    border-radius: 4px;
+                    justify-content: space-between;
+                    gap: 20px;
+                }
+
+                .dropdown-item:hover {
+                    cursor: pointer;
+                }
+                .dropdown-item.selected {
+                    font-weight: 600;
+                }
+                .dropdown-item:hover {
+                    cursor: pointer;
+                    background-color: #deefff;
+                }
+                .dropdown-item.focused {
+                    background-color: #deefff;
+                }
             }
 
             .sample-placeholder {
@@ -267,22 +289,6 @@
                         font-weight: 400;
                     }
                 }
-            }
-
-            .dropdown-items button {
-                display: flex;
-                justify-content: space-between;
-                padding: 5px 15px;
-                border-radius: 5px;
-                font-size: 1.25rem;
-                background-color: transparent;
-                border: none;
-                gap: 30px;
-            }
-
-            .dropdown-items button:hover {
-                cursor: pointer;
-                background-color: #deefff;
             }
         }
         .dropdown-container.filter {
@@ -333,6 +339,11 @@
             .dropdown-button {
                 border-width: 2px;
                 font-weight: 600;
+            }
+        }
+        .dropdown-container.cohort-selector {
+            .dropdown-item {
+                font-size: 1.25rem;
             }
         }
     }
