- feat: revert to Upload for url button - style: update navigation bar styles for safari

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -160,6 +160,8 @@ a:hover {
 }
 
 .title-about-link {
+    display: flex;
+    align-items: center;
     margin: auto 12px;
     font-size: 12px;
     cursor: pointer;
