style: update banner color

--- a/src/css/VisOverviewPanel.css
+++ b/src/css/VisOverviewPanel.css
@@ -408,9 +408,9 @@
 }
 
 .alert-warning.external-demo {
-    background-color: #fff9f9;
+    background-color: #ba3e3e;
     border: 1px solid #ba3e3e;
-    color: #ba3e3e;
+    color: white;
     margin-bottom: 0px;
     border-radius: 0px;
     padding: 20px;
@@ -427,7 +427,7 @@
     line-height: 1rem;
     cursor: pointer;
     padding: 4px;
-    color: #842a2a;
+    color: white;
 }
 .alert-warning.external-demo .close:hover {
     background-color: #e7cccc8d;
