--- a/src/css/ClinicalPanel.css
+++ b/src/css/ClinicalPanel.css
@@ -137,7 +137,7 @@
     flex-direction: column;
     flex: 1;
     box-sizing: border-box !important;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0px 8px;
     font-size: 0.75rem;
     border: solid #cad3da;
@@ -207,7 +207,7 @@
     padding: 0px;
 }
 .clinical-panel-container .content .panel-section.variants .section-body .data-list {
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
 .clinical-panel-container .content .panel-section.variants .section-body .data-list .data-row {
@@ -310,7 +310,7 @@
 .clinical-panel-container .content .dropdown-row {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
 }
 .clinical-panel-container .content .dropdown-row .header {
     box-sizing: border-box !important;
@@ -348,7 +348,7 @@
 }
 
 .clinical-panel-container .content .dropdown-row .body {
-    overflow: scroll;
+    overflow: auto;
 }
 .clinical-panel-container .content .dropdown-row.expanded {
     flex: 1;
